--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  
  <div id="wrapper">
  <div class="side-menu">
-    <a href="#" class="side-menu__link" >
+    <a href="#" class="side-menu-link" >
     <i class="icon-Home">
     </i>
     <span>Home</span>
@@ -155,7 +155,7 @@
 <span>Report history</span>
 </a>
 <a href="#">
-    <i class="icon-Help">
+    <i class="icon-Help"> 
     </i>
 <span>Help</span>
 </a>
